Archive/0abb2ab87a53b62a5a21958ead496c56-69bf926bd8b41648db61a57b8aec5204/output
+ g++-4.8 -c -std=c++11 -O2 -Wall -pedantic main.cpp
main.cpp: In function 'std::future<std::basic_string<char> > get_resource(const string&)':
main.cpp:12:16: error: could not convert 'cached_result' from 'std::string {aka std::basic_string<char>}' to 'std::future<std::basic_string<char> >'
         return cached_result; // how to wrap in std::future?
                ^
